--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,13 @@
 machine:
-  services:
-    - docker
+  environment:
+    GCLOUD_PROJECT: "pubsub-1220"
 
 dependencies:
   pre:
+    - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
+    - gcloud --quiet components update app
+    - gcloud auth activate-service-account --key-file ${HOME}/client-secret.json
+    - gcloud config set project $GCLOUD_PROJECT
     - wget http://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb && sudo dpkg -i erlang-solutions_1.0_all.deb
     - sudo apt-get update
     - sudo apt-get install elixir
